# manufacturing-simulation

./: README.md  dea.py  pyproject.toml  requeriments.txt  requirements-dev.txt  requirements.txt  setup.py
config/: config.yaml  products.yaml
config.exemple/: raw_material.yaml  resources.yaml
data/: .gitignore
environment/: environment.py
example/: example_sim.py  simulation.py
example/conf/: config.yaml
example/config/: factory_sim.py  products.yaml
examples/simple_scheduler/: simulation.py
examples/simple_scheduler/conf/: config.yaml
examples/toc_dbr/: simulation.py
examples/toc_dbr/config/: config.yaml
notebooks/: dbr_fuctions_test.ipynb  distribution.ipynb  performance_tests.ipynb
shop-environment/: environment.py
simulations/article/: scheduler.py  simulation.py
simulations/article copy/: simulation.py
simulations/article/config/: config.yaml  products_original.yaml  resources.yaml
simulations/dbr_mta/: cli_config.py  experiment.py  scheduler.py  simulation.py  stores.py
simulations/dbr_mta/config/: config.yaml  products.yaml  resources.yaml
simulations/dbr_mta/data/: config_products.yaml  config_resources.yaml  (+1 more)
simulations/example/: simulation.py
src/: Control.py  Production.py  monitor.py  scheduler.py  simulation.py  teste.ipynb
src/manusim/: experiment.py  factory_sim.py  metrics.py
src/rlsim/: __init__.py  control.py  environment.py  experiment.py  factory_sim.py  factory_sim_improved.py  inbound.py  metrics.py  monitor.py  outbound.py  production.py  scheduler.py  scheduler_dbr.py  simple_scheduler.py  simulation.py
(+30 files in other folders)
