[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manusim"
version = "0.1.0"
description = "Discret-event simulation of a job shop scheduling for reinforcement learning"
authors = [
    {name = "Daniel Klein", email = "kleindaniel@live.com"}
]
maintainers = [
    {name = "Daniel Klein", email = "kleindaniel@live.com"}
]
requires-python = ">= 3.11"
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
